--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="section3.css">
     <link rel="stylesheet" href="section2.css">
     <link rel="stylesheet" href="section4.css">
+    <link rel="stylesheet" href="section5.css">
     <title>Fast Fashion</title>
 </head>
 
@@ -213,7 +214,7 @@
     <section class="sec-4">
         <div class="cloud">
             <div class="c_1">
-                <img src="/img/assets/d/d01_cloud.png">
+                <img class="c-img-1" src="/img/assets/d/d01_cloud.png">
             </div>
             <div class="c_2">
                 <img src="/img/assets/d/d02_cloud.png">
@@ -231,7 +232,32 @@
         <div class="sec4_text">
             <p>แล้ว Fast Fashion<br>สร้างผลกระทบอะไรบ้างนะ</p>
         </div>
+        <div class="cloud_cover">
+            <img src="/img/assets/e/e01_cloud.png">
+        </div>
     </section>
+
+    <section class="sec-5">
+        <div class="sec-5-text1">
+            <p>ผลกระทบ</p>
+        </div>
+        <div class="sec-5-text2">
+            <p>ด้านสิ่งแวดล้อม</p>
+        </div>
+        <div class="group">
+            <div class="cloud">
+                <img src="/img/assets/f/f02_cloud.png">
+            </div>
+            <div class="jean">
+                <img src="/img/assets/f/f03_jean.png">
+            </div>
+            <div class="clay">
+                <img src="/img/assets/f/f04_clay.png">
+            </div>
+        </div>
+    </section>
+        
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
