--- a/index.html
+++ b/index.html
@@ -245,7 +245,10 @@
             <p>ด้านสิ่งแวดล้อม</p>
         </div>
         <div class="group">
-            <div class="cloud">
+            <div class="sun">
+                <img src="/img/assets/f/f01_sun.png">
+            </div>
+            <div class="sec-5-cloud">
                 <img src="/img/assets/f/f02_cloud.png">
             </div>
             <div class="jean">
@@ -253,6 +256,27 @@
             </div>
             <div class="clay">
                 <img src="/img/assets/f/f04_clay.png">
+            </div>
+            <div class="water">
+                <img src="/img/assets/f/f05_water.png">
+            </div>
+            <div class="land">
+                <img src="/img/assets/f/f06_land.png">
+            </div>
+            <div class="blender">
+                <img src="/img/assets/f/f06.5_blender.png">
+            </div>
+            <div class="factory">
+                <img src="/img/assets/f/f06.5_factory.png">
+            </div>
+            <div class="tree">
+                <img src="/img/assets/f/f07_tree.png">
+            </div>
+            <div class="fish">
+                <img src="/img/assets/f/f08_fish.png">
+            </div>
+            <div class="pipe">
+                <img src="/img/assets/f/f09_pipe.png">
             </div>
         </div>
     </section>
