--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
                             d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
                     </svg>
                 </a>
-                <a href="#" class="list">หน้าหลัก</a>
-                <a href="#" class="list">ความหมาย</a>
-                <a href="#" class="list">ผลกระทบ</a>
+                <a href="#section1" class="list">หน้าหลัก</a>
+                <a href="#section2" class="list">ความหมาย</a>
+                <a href="#section5" class="list">ผลกระทบ</a>
                 <a href="#" class="list">แนวทางการแก้ปัญหา</a>
                 <a href="#" class="list">ผู้จัดทำ</a>
             </div>
         </div>
     </div>
 
-    <section class="sec-1">
+    <section class="sec-1" id="section1">
         <div class="cover">
             <div class="wrapper_1">
                 <img src="/img/assets/a/a04_box.png">
@@ -105,7 +105,7 @@
         </div>
     </section>
 
-    <section class="sec-2 " id="smooth-wrapper">
+    <section class="sec-2 " id="section2">
 
         <h3 class="titleBurrowing">What is</h3>
         <div class="titleBurrowing">
@@ -239,7 +239,7 @@
 
     <section class="sec-5">
         <div class="sec-5-text1">
-            <p>ผลกระทบ</p>
+            <p id="section5">ผลกระทบ</p>
         </div>
         <div class="sec-5-text2">
             <p>ด้านสิ่งแวดล้อม</p>
