แยกโฟลเดอร์ css js

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css.css">
-    <link rel="stylesheet" href="section3.css">
-    <link rel="stylesheet" href="section2.css">
-    <link rel="stylesheet" href="section4.css">
-    <link rel="stylesheet" href="section5.css">
+    <link rel="stylesheet" href="/css/css.css">
+    <link rel="stylesheet" href="/css/section2.css">
+    <link rel="stylesheet" href="/css/section3.css">
+    <link rel="stylesheet" href="/css/section4.css">
+    <link rel="stylesheet" href="/css/section5.css">
     <title>Fast Fashion</title>
 </head>
 
@@ -292,12 +292,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
-    <script src="navbar.js"></script>
-    <script src="section1.js"></script>
-    <script src="section2.js"></script>
-    <script src="section3.js"></script>
-    <script src="section4.js"></script>
-    <script src="section5.js"></script>
+    <script src="/javascript/navbar.js"></script>
+    <script src="/javascript/section1.js"></script>
+    <script src="/javascript/section2.js"></script>
+    <script src="/javascript/section3.js"></script>
+    <script src="/javascript/section4.js"></script>
+    <script src="/javascript/section5.js"></script>
 </body>
 
 </html>
