ปรับ nav + เพิ่ม progress bar

--- a/index.html
+++ b/index.html
@@ -1,254 +1,253 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/css.css">
-    <link rel="stylesheet" href="/css/section2.css">
-    <link rel="stylesheet" href="/css/section3.css">
-    <link rel="stylesheet" href="/css/section4.css">
-    <link rel="stylesheet" href="/css/section5.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/css.css" />
+    <link rel="stylesheet" href="/css/section2.css" />
+    <link rel="stylesheet" href="/css/section3.css" />
+    <link rel="stylesheet" href="/css/section4.css" />
+    <link rel="stylesheet" href="/css/section5.css" />
     <title>Fast Fashion</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    <progress max="100" value="0"></progress>
     <div class="navbar">
-        <div class="nav" id="nav">
-            <a href="#home">
-                <img src="/img/assets/logo.png">
-            </a>
-            <a href="#myLinks" class="icon" onclick="openNav()">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                        d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
-                </svg>
-            </a>
-            <div class="slide_nav" id="slide_nav">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                        <path
-                            d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
-                    </svg>
-                </a>
-                <a href="#section1" class="list">หน้าหลัก</a>
-                <a href="#section2" class="list">ความหมาย</a>
-                <a href="#section5" class="list">ผลกระทบ</a>
-                <a href="#" class="list">แนวทางการแก้ปัญหา</a>
-                <a href="#" class="list">ผู้จัดทำ</a>
-            </div>
+      <div class="nav" id="nav">
+        <a href="#home">
+          <img src="/img/assets/logo.png" />
+        </a>
+        <a href="#myLinks" class="icon" onclick="openNav()">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+            <path
+              fill-rule="evenodd"
+              d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"
+            />
+          </svg>
+        </a>
+        <div class="slide_nav" id="slide_nav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+              <path
+                d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"
+              />
+            </svg>
+          </a>
+          <a href="#section1" class="list">หน้าหลัก</a>
+          <a href="#section2" class="list">ความหมาย</a>
+          <a href="#section5" class="list">ผลกระทบ</a>
+          <a href="#" class="list">แนวทางการแก้ปัญหา</a>
+          <a href="#" class="list">ผู้จัดทำ</a>
         </div>
+      </div>
     </div>
 
     <section class="sec-1" id="section1">
-        <div class="cover">
-            <div class="wrapper_1">
-                <img src="/img/assets/a/a04_box.png">
-            </div>
-            <div class="wrapper_2" id="wrapper_2">
-                <img src="/img/assets/a/a03_shirt.png">
-            </div>
-            <div class="wrapper_3">
-                <img src="/img/assets/a/a02_bowl.png">
-            </div>
+      <div class="cover">
+        <div class="wrapper_1">
+          <img src="/img/assets/a/a04_box.png" />
         </div>
-        <div class="title">
-            <div class="paper_1" id="paper">
-                <img src="/img/assets/a/a04.5_paper1.png">
-            </div>
-            <div class="fast_1">
-                <img src="/img/assets/a/a05_fast1.png">
-            </div>
-            <div class="fast_2">
-                <img src="/img/assets/a/a05_fast2.png">
-            </div>
-            <div class="fast_3">
-                <img src="/img/assets/a/a05_fast3.png">
-            </div>
-            <div class="fast_4">
-                <img src="/img/assets/a/a05_fast4.png">
-            </div>
-            <div class="braek">
-                <img src="/img/assets/a/a05_braek.png">
-            </div>
+        <div class="wrapper_2" id="wrapper_2">
+          <img src="/img/assets/a/a03_shirt.png" />
+        </div>
+        <div class="wrapper_3">
+          <img src="/img/assets/a/a02_bowl.png" />
+        </div>
+      </div>
+      <div class="title">
+        <div class="paper_1" id="paper">
+          <img src="/img/assets/a/a04.5_paper1.png" />
+        </div>
+        <div class="fast_1">
+          <img src="/img/assets/a/a05_fast1.png" />
+        </div>
+        <div class="fast_2">
+          <img src="/img/assets/a/a05_fast2.png" />
+        </div>
+        <div class="fast_3">
+          <img src="/img/assets/a/a05_fast3.png" />
+        </div>
+        <div class="fast_4">
+          <img src="/img/assets/a/a05_fast4.png" />
+        </div>
+        <div class="braek">
+          <img src="/img/assets/a/a05_braek.png" />
+        </div>
 
-            <div class="paper_2">
-                <img src="/img/assets/a/a04.5_paper2.png">
-            </div>
-            <div class="fashion_1">
-                <img src="/img/assets/a/a05_fashion1.png">
-            </div>
-            <div class="fashion_2">
-                <img src="/img/assets/a/a05_fashion2.png">
-            </div>
-            <div class="fashion_3">
-                <img src="/img/assets/a/a05_fashion3.png">
-            </div>
-            <div class="fashion_4">
-                <img src="/img/assets/a/a05_fashion4.png">
-            </div>
-            <div class="fashion_5">
-                <img src="/img/assets/a/a05_fashion5.png">
-            </div>
-            <div class="fashion_6">
-                <img src="/img/assets/a/a05_fashion6.png">
-            </div>
-            <div class="fashion_7">
-                <img src="/img/assets/a/a05_fashion7.png">
-            </div>
-            <div class="caption">
-                <img src="/img/assets/a/a05_caption.png">
-            </div>
-            <div class="bg">
-                <img src="/img/assets/a/a01_tablecloth.png">
-            </div>
+        <div class="paper_2">
+          <img src="/img/assets/a/a04.5_paper2.png" />
         </div>
+        <div class="fashion_1">
+          <img src="/img/assets/a/a05_fashion1.png" />
+        </div>
+        <div class="fashion_2">
+          <img src="/img/assets/a/a05_fashion2.png" />
+        </div>
+        <div class="fashion_3">
+          <img src="/img/assets/a/a05_fashion3.png" />
+        </div>
+        <div class="fashion_4">
+          <img src="/img/assets/a/a05_fashion4.png" />
+        </div>
+        <div class="fashion_5">
+          <img src="/img/assets/a/a05_fashion5.png" />
+        </div>
+        <div class="fashion_6">
+          <img src="/img/assets/a/a05_fashion6.png" />
+        </div>
+        <div class="fashion_7">
+          <img src="/img/assets/a/a05_fashion7.png" />
+        </div>
+        <div class="caption">
+          <img src="/img/assets/a/a05_caption.png" />
+        </div>
+        <div class="bg">
+          <img src="/img/assets/a/a01_tablecloth.png" />
+        </div>
+      </div>
     </section>
 
-    <section class="sec-2 " id="section2">
+    <section class="sec-2" id="section2">
+      <h3 class="titleBurrowing">What is</h3>
+      <div class="titleBurrowing">
+        <img src="/img/assets/b/b03_fastfashion.png" />
+      </div>
 
-        <h3 class="titleBurrowing">What is</h3>
-        <div class="titleBurrowing">
-            <img src="/img/assets/b/b03_fastfashion.png">
-        </div>
-
-        <p class="titleBurrowing">กระบวนการผลิตเสื้อผ้าที่เน้นความรวดเร็วฉับไว เป็นแฟชั่นวงจรสั้นๆ
-            เปลี่ยนรูปแบบไปเรื่อย ๆ เน้นการขายปริมาณมากในเวลาอันรวดเร็ว
-            โดยใช้ต้นทุนต่ำทั้งในส่วนของวัตถุดิบที่ใช้ในการผลิตและแรงงาน
-            เพื่อที่ให้เสื้อผ้านั้นมีราคาถูก เข้าถึงง่าย และสวมใส่ได้ในทุกโอกาส<br>
-            แต่กระนั้นเอง ตลอดทุกขั้นตอนการผลิตได้ส่ผลต่อสิ่งแวดล้อมเป็นวงกว้าง
-        </p>
-        <div class="bag">
-            <img src="/img/assets/b/b02_bag.png">
-        </div>
-        <div class="hanger">
-            <img src="/img/assets/b/b02_hanger.png">
-        </div>
-        <div class="search">
-            <img class="search_icon" src="/img/assets/b/b04_magnifying.png">
-        </div>
+      <p class="titleBurrowing">
+        กระบวนการผลิตเสื้อผ้าที่เน้นความรวดเร็วฉับไว เป็นแฟชั่นวงจรสั้นๆ
+        เปลี่ยนรูปแบบไปเรื่อย ๆ เน้นการขายปริมาณมากในเวลาอันรวดเร็ว
+        โดยใช้ต้นทุนต่ำทั้งในส่วนของวัตถุดิบที่ใช้ในการผลิตและแรงงาน
+        เพื่อที่ให้เสื้อผ้านั้นมีราคาถูก เข้าถึงง่าย และสวมใส่ได้ในทุกโอกาส<br />
+        แต่กระนั้นเอง ตลอดทุกขั้นตอนการผลิตได้ส่งผลต่อสิ่งแวดล้อมเป็นวงกว้าง
+      </p>
+      <div class="bag">
+        <img src="/img/assets/b/b02_bag.png" />
+      </div>
+      <div class="hanger">
+        <img src="/img/assets/b/b02_hanger.png" />
+      </div>
+      <div class="search">
+        <img class="search_icon" src="/img/assets/b/b04_magnifying.png" />
+      </div>
     </section>
-
 
     <section class="sec-3">
-        <div class="text-box">
-            <div class="text-1">
-                <div class="box-1">
-                    <p>หลากหลายสไตล์</p>
-                </div>
-            </div>
-            <div class="text-2">
-                <div class="box-2">
-                    <p>ราคาถูก</p>
-                </div>
-            </div>
-            <div class="text-3">
-                <div class="box-3">
-                    <p>คุณภาพวัสดุต่ำ</p>
-                </div>
-            </div>
-            <div class="text-4">
-                <div class="box-4">
-                    <p>ผลิตอย่างรวดเร็ว</p>
-
-                </div>
-            </div>
-            <div class="text-5">
-                <div class="box-5">
-                    <p>ผลิตนอกประเทศ</p>
-
-                </div>
-            </div>
+      <div class="text-box">
+        <div class="text-1">
+          <div class="box-1">
+            <p>หลากหลายสไตล์</p>
+          </div>
         </div>
-        <div class="line">
-            <div class="line-1">
-                <img src="/img/assets/c/c05_dot1.png">
-            </div>
-            <div class="line-2">
-                <img src="/img/assets/c/c05_dot2.png">
-            </div>
-            <div class="line-3">
-                <img src="/img/assets/c/c05_dot3.png">
-            </div>
-            <div class="line-4">
-                <img src="/img/assets/c/c05_dot4.png">
-            </div>
-            <div class="line-5">
-                <img src="/img/assets/c/c05_dot5.png">
-            </div>
+        <div class="text-2">
+          <div class="box-2">
+            <p>ราคาถูก</p>
+          </div>
         </div>
-        <div class="shirt">
-            <div class="shirt-img-1">
-                <img class="shirt-1" src="/img/assets/c/c02_jacket.png">
-            </div>
-            <div class="shirt-img-2">
-                <img class="shirt-2" src="/img/assets/c/c02_sweater.png">
-            </div>
-            <div class="shirt-img-3">
-                <img class="shirt-3" src="/img/assets/c/c02_coat.png">
-            </div>
-            <div class="shirt-img-4">
-                <img class="shirt-4" src="/img/assets/c/c02_mickey.png">
-            </div>
-            <div class="shirt-img-5">
-                <img class="shirt-5" src="/img/assets/c/c02_dress.png">
-            </div>
-            <div class="shirt-img-6">
-                <img class="shirt-6" src="/img/assets/c/c03_shirt.png">
-            </div>
-            <div class="shirt-img-7">
-                <img class="shirt-7" src="/img/assets/c/c04_hood.png">
-            </div>
-            <div class="shirt-img-8">
-                <img class="shirt-8" src="/img/assets/c/c02_cheap.png">
-            </div>
-            <div class="shirt-img-9">
-                <img class="shirt-9" src="/img/assets/c/c04_box.png">
-            </div>
-            <div class="shirt-img-10">
-                <img class="shirt-10" src="/img/assets/c/c02_label.png">
-            </div>
+        <div class="text-3">
+          <div class="box-3">
+            <p>คุณภาพวัสดุต่ำ</p>
+          </div>
         </div>
+        <div class="text-4">
+          <div class="box-4">
+            <p>ผลิตอย่างรวดเร็ว</p>
+          </div>
+        </div>
+        <div class="text-5">
+          <div class="box-5">
+            <p>ผลิตนอกประเทศ</p>
+          </div>
+        </div>
+      </div>
+      <div class="line">
+        <div class="line-1">
+          <img src="/img/assets/c/c05_dot1.png" />
+        </div>
+        <div class="line-2">
+          <img src="/img/assets/c/c05_dot2.png" />
+        </div>
+        <div class="line-3">
+          <img src="/img/assets/c/c05_dot3.png" />
+        </div>
+        <div class="line-4">
+          <img src="/img/assets/c/c05_dot4.png" />
+        </div>
+        <div class="line-5">
+          <img src="/img/assets/c/c05_dot5.png" />
+        </div>
+      </div>
+      <div class="shirt">
+        <div class="shirt-img-1">
+          <img class="shirt-1" src="/img/assets/c/c02_jacket.png" />
+        </div>
+        <div class="shirt-img-2">
+          <img class="shirt-2" src="/img/assets/c/c02_sweater.png" />
+        </div>
+        <div class="shirt-img-3">
+          <img class="shirt-3" src="/img/assets/c/c02_coat.png" />
+        </div>
+        <div class="shirt-img-4">
+          <img class="shirt-4" src="/img/assets/c/c02_mickey.png" />
+        </div>
+        <div class="shirt-img-5">
+          <img class="shirt-5" src="/img/assets/c/c02_dress.png" />
+        </div>
+        <div class="shirt-img-6">
+          <img class="shirt-6" src="/img/assets/c/c03_shirt.png" />
+        </div>
+        <div class="shirt-img-7">
+          <img class="shirt-7" src="/img/assets/c/c04_hood.png" />
+        </div>
+        <div class="shirt-img-8">
+          <img class="shirt-8" src="/img/assets/c/c02_cheap.png" />
+        </div>
+        <div class="shirt-img-9">
+          <img class="shirt-9" src="/img/assets/c/c04_box.png" />
+        </div>
+        <div class="shirt-img-10">
+          <img class="shirt-10" src="/img/assets/c/c02_label.png" />
+        </div>
+      </div>
     </section>
 
     <section class="sec-4">
-        <div class="cloud">
-            <div class="c_1">
-                <img class="c-img-1" src="/img/assets/d/d01_cloud.png">
-            </div>
-            <div class="c_2">
-                <img src="/img/assets/d/d02_cloud.png">
-            </div>
-            <div class="c_3">
-                <img src="/img/assets/d/d03_cloud.png">
-            </div>
-            <div class="c_4">
-                <img src="/img/assets/d/d04_cloud.png">
-            </div>
-            <div class="btf">
-                <img src="/img/assets/d/d05_butterfly.png">
-            </div>
+      <div class="cloud">
+        <div class="c_1">
+          <img class="c-img-1" src="/img/assets/d/d01_cloud.png" />
         </div>
-        <div class="sec4_text">
-            <p>แล้ว Fast Fashion<br>สร้างผลกระทบอะไรบ้างนะ</p>
+        <div class="c_2">
+          <img src="/img/assets/d/d02_cloud.png" />
         </div>
-        <div class="cloud_cover">
-            <img src="/img/assets/e/e01_cloud.png">
+        <div class="c_3">
+          <img src="/img/assets/d/d03_cloud.png" />
         </div>
-
+        <div class="c_4">
+          <img src="/img/assets/d/d04_cloud.png" />
+        </div>
+        <div class="btf">
+          <img src="/img/assets/d/d05_butterfly.png" />
+        </div>
+      </div>
+      <div class="sec4_text">
+        <p>แล้ว Fast Fashion<br />สร้างผลกระทบอะไรบ้างนะ</p>
+      </div>
+      <div class="cloud_cover">
+        <img src="/img/assets/e/e01_cloud.png" />
+      </div>
     </section>
 
     <section class="sec-5">
-        <div class="sec-5-text">
-            <div class="sec-5-text1">
-                <p id="section5">ผลกระทบ</p>
-            </div>
-            <div class="sec-5-text2">
-                <p>ด้านสิ่งแวดล้อม</p>
-            </div>
+      <div class="sec-5-text">
+        <div class="sec-5-text1">
+          <p id="section5">ผลกระทบ</p>
         </div>
-        <div class="group">
-            <!-- <div class="sun">
+        <div class="sec-5-text2">
+          <p>ด้านสิ่งแวดล้อม</p>
+        </div>
+      </div>
+      <div class="group">
+        <!-- <div class="sun">
                 <img src="/img/assets/f/f01_sun.png">
             </div>
             <div class="sec-5-cloud">
@@ -280,24 +279,27 @@
             </div>
             <div class="pipe">
                 <img src="/img/assets/f/f09_pipe.png">
+                
             </div> -->
-            <div class="parallax">
-                <img class="parallax-image" src="/img/assets/f/f00_all.png">
-            </div> 
+        <div class="banner">
+          <p>Fast Fashion</p>
         </div>
+        <div class="parallax">
+          <img class="parallax-image" src="/img/assets/f/f00_all.png" />
+        </div>
+      </div>
     </section>
-
-
+    <section class="sec-4"></section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
     <script src="/javascript/navbar.js"></script>
+    <script src="/javascript/progress,js"></script>
     <script src="/javascript/section1.js"></script>
     <script src="/javascript/section2.js"></script>
     <script src="/javascript/section3.js"></script>
     <script src="/javascript/section4.js"></script>
     <script src="/javascript/section5.js"></script>
-</body>
-
+  </body>
 </html>
