--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="navbar">
         <div class="nav" id="nav">
-            <a href="#home">
+            <a href="#section1">
                 <img src="/img/assets/logo.png">
             </a>
             <a href="#myLinks" class="icon" onclick="openNav()">
@@ -238,20 +238,20 @@
 
     </section>
 
-    <section class="sec-5">
+    <section class="sec-5" id="section5">
         <div class="sec-5-text">
             <div class="sec-5-text1">
-                <p id="section5">ผลกระทบ</p>
+                <p>ผลกระทบ</p>
             </div>
             <div class="sec-5-text2">
                 <p>ด้านสิ่งแวดล้อม</p>
             </div>
         </div>
         <div class="group">
-            <!-- <div class="sun">
+             <!-- <div class="sun">
                 <img src="/img/assets/f/f01_sun.png">
             </div>
-            <div class="sec-5-cloud">
+            <div class="cloud_group">
                 <img src="/img/assets/f/f02_cloud2.png">
             </div>
             <div class="jean">
@@ -283,14 +283,25 @@
             </div> -->
             <div class="parallax">
                 <img class="parallax-image" src="/img/assets/f/f00_all.png">
-            </div> 
+            </div>
+            <!-- <div class="box box3"></div>
+            <div>
+            <div class="container">
+                <div class="box box0"></div>    
+                <div class="box box1"></div>
+                <div class="box box2"></div>
+            </div></div> -->
         </div>
+        
+
     </section>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+    <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
+    <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
     <script src="/javascript/navbar.js"></script>
     <script src="/javascript/section1.js"></script>
