test loader + intro

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
   </head>
 
   <body>
+    <div class="intro">
+      <div class="intro-text">
+        <div class="loader"></div>
+      </div>
+    </div>
+    <div class="slider"></div>
+
     <progress max="100" value="0"></progress>
     <div class="navbar">
       <div class="nav" id="nav">
@@ -59,16 +66,16 @@
         <div class="paper_1" id="paper">
           <img src="/img/assets/a/a04.5_paper1.png" />
         </div>
-        <div class="fast_1">
+        <div class="fast_1 fast-text">
           <img src="/img/assets/a/a05_fast1.png" />
         </div>
-        <div class="fast_2">
+        <div class="fast_2 fast-text">
           <img src="/img/assets/a/a05_fast2.png" />
         </div>
-        <div class="fast_3">
+        <div class="fast_3 fast-text">
           <img src="/img/assets/a/a05_fast3.png" />
         </div>
-        <div class="fast_4">
+        <div class="fast_4 fast-text">
           <img src="/img/assets/a/a05_fast4.png" />
         </div>
         <div class="braek">
@@ -78,25 +85,25 @@
         <div class="paper_2">
           <img src="/img/assets/a/a04.5_paper2.png" />
         </div>
-        <div class="fashion_1">
+        <div class="fashion_1 fash-text">
           <img src="/img/assets/a/a05_fashion1.png" />
         </div>
-        <div class="fashion_2">
+        <div class="fashion_2 fash-text">
           <img src="/img/assets/a/a05_fashion2.png" />
         </div>
-        <div class="fashion_3">
+        <div class="fashion_3 fash-text">
           <img src="/img/assets/a/a05_fashion3.png" />
         </div>
-        <div class="fashion_4">
+        <div class="fashion_4 fash-text">
           <img src="/img/assets/a/a05_fashion4.png" />
         </div>
-        <div class="fashion_5">
+        <div class="fashion_5 fash-text">
           <img src="/img/assets/a/a05_fashion5.png" />
         </div>
-        <div class="fashion_6">
+        <div class="fashion_6 fash-text">
           <img src="/img/assets/a/a05_fashion6.png" />
         </div>
-        <div class="fashion_7">
+        <div class="fashion_7 fash-text">
           <img src="/img/assets/a/a05_fashion7.png" />
         </div>
         <div class="caption">
