--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/section3.css" />
     <link rel="stylesheet" href="/css/section4.css" />
     <link rel="stylesheet" href="/css/section5.css" />
+    <link rel="stylesheet" href="/css/section6.css"/>
     <title>Fast Fashion</title>
   </head>
 
@@ -15,7 +16,7 @@
     <progress max="100" value="0"></progress>
     <div class="navbar">
       <div class="nav" id="nav">
-        <a href="#home">
+        <a href="#section1">
           <img src="/img/assets/logo.png" />
         </a>
         <a href="#myLinks" class="icon" onclick="openNav()">
@@ -237,10 +238,10 @@
       </div>
     </section>
 
-    <section class="sec-5">
+    <section class="sec-5 "id="section5">
       <div class="sec-5-text">
         <div class="sec-5-text1">
-          <p id="section5">ผลกระทบ</p>
+          <p >ผลกระทบ</p>
         </div>
         <div class="sec-5-text2">
           <p>ด้านสิ่งแวดล้อม</p>
@@ -323,6 +324,16 @@
           <img class="parallax-image" src="/img/assets/f/f00_all.png" />
         </div>
       </div>
+      <div class="sec-5-div"><img class="sec-5-bg" src="/img/assets/g/bg.png"></div>
+      <!-- <div class="sec-5-title">
+        <p>ปัญหาสิทธิมนุษยชน</p>
+      </div> -->
+    </section>
+
+    <section class="sec-6">
+      <div class="sec-6-title">
+        <p>ปัญหาสิทธิมนุษยชน</p>
+      </div>
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -338,5 +349,6 @@
     <script src="/javascript/section3.js"></script>
     <script src="/javascript/section4.js"></script>
     <script src="/javascript/section5.js"></script>
+    <script src="/javascript/section6.js"></script>
   </body>
 </html>
