--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   </head>
 
   <body>
+    <div class="blockmb">
+      <div class="phone"></div>
+      <div class="message">โปรดหมุนอุปกรณ์ของคุณ</div>
+    </div>
     <div class="intro">
       <div class="intro-text">
         <div class="loader"></div>
@@ -22,7 +26,7 @@
     <progress max="100" value="0"></progress>
     <div class="navbar">
       <div class="nav" id="nav">
-        <a href="#home">
+        <a href="#section1">
           <img src="/img/assets/logo.png" />
         </a>
         <a href="#myLinks" class="icon" onclick="openNav()">
@@ -49,212 +53,213 @@
         </div>
       </div>
     </div>
-
-    <section class="sec-1" id="section1">
-      <div class="cover">
-        <div class="wrapper_1">
-          <img src="/img/assets/a/a04_box.png" />
-        </div>
-        <div class="wrapper_2" id="wrapper_2">
-          <img src="/img/assets/a/a03_shirt.png" />
-        </div>
-        <div class="wrapper_3">
-          <img src="/img/assets/a/a02_bowl.png" />
-        </div>
-      </div>
-      <div class="title">
-        <div class="paper_1" id="paper">
-          <img src="/img/assets/a/a04.5_paper1.png" />
-        </div>
-        <div class="fast_1 fast-text">
-          <img src="/img/assets/a/a05_fast1.png" />
-        </div>
-        <div class="fast_2 fast-text">
-          <img src="/img/assets/a/a05_fast2.png" />
-        </div>
-        <div class="fast_3 fast-text">
-          <img src="/img/assets/a/a05_fast3.png" />
-        </div>
-        <div class="fast_4 fast-text">
-          <img src="/img/assets/a/a05_fast4.png" />
-        </div>
-        <div class="braek">
-          <img src="/img/assets/a/a05_braek.png" />
-        </div>
-
-        <div class="paper_2">
-          <img src="/img/assets/a/a04.5_paper2.png" />
-        </div>
-        <div class="fashion_1 fash-text">
-          <img src="/img/assets/a/a05_fashion1.png" />
-        </div>
-        <div class="fashion_2 fash-text">
-          <img src="/img/assets/a/a05_fashion2.png" />
-        </div>
-        <div class="fashion_3 fash-text">
-          <img src="/img/assets/a/a05_fashion3.png" />
-        </div>
-        <div class="fashion_4 fash-text">
-          <img src="/img/assets/a/a05_fashion4.png" />
-        </div>
-        <div class="fashion_5 fash-text">
-          <img src="/img/assets/a/a05_fashion5.png" />
-        </div>
-        <div class="fashion_6 fash-text">
-          <img src="/img/assets/a/a05_fashion6.png" />
-        </div>
-        <div class="fashion_7 fash-text">
-          <img src="/img/assets/a/a05_fashion7.png" />
-        </div>
-        <div class="caption">
-          <img src="/img/assets/a/a05_caption.png" />
-        </div>
-        <div class="bg">
-          <img src="/img/assets/a/a01_tablecloth.png" />
-        </div>
-      </div>
-    </section>
-
-    <section class="sec-2" id="section2">
-      <h3 class="titleBurrowing">What is</h3>
-      <div class="titleBurrowing">
-        <img src="/img/assets/b/b03_fastfashion.png" />
-      </div>
-
-      <p class="titleBurrowing">
-        กระบวนการผลิตเสื้อผ้าที่เน้นความรวดเร็วฉับไว เป็นแฟชั่นวงจรสั้นๆ
-        เปลี่ยนรูปแบบไปเรื่อย ๆ เน้นการขายปริมาณมากในเวลาอันรวดเร็ว
-        โดยใช้ต้นทุนต่ำทั้งในส่วนของวัตถุดิบที่ใช้ในการผลิตและแรงงาน
-        เพื่อที่ให้เสื้อผ้านั้นมีราคาถูก เข้าถึงง่าย และสวมใส่ได้ในทุกโอกาส<br />
-        แต่กระนั้นเอง ตลอดทุกขั้นตอนการผลิตได้ส่งผลต่อสิ่งแวดล้อมเป็นวงกว้าง
-      </p>
-      <div class="bag">
-        <img src="/img/assets/b/b02_bag.png" />
-      </div>
-      <div class="hanger">
-        <img src="/img/assets/b/b02_hanger.png" />
-      </div>
-      <div class="search">
-        <img class="search_icon" src="/img/assets/b/b04_magnifying.png" />
-      </div>
-    </section>
-
-    <section class="sec-3">
-      <div class="text-box">
-        <div class="text-1">
-          <div class="box-1">
-            <p>หลากหลายสไตล์</p>
+    <div class="wrapweb">
+      <section class="sec-1" id="section1">
+        <div class="cover">
+          <div class="wrapper_1">
+            <img src="/img/assets/a/a04_box.png" />
+          </div>
+          <div class="wrapper_2" id="wrapper_2">
+            <img src="/img/assets/a/a03_shirt.png" />
+          </div>
+          <div class="wrapper_3">
+            <img src="/img/assets/a/a02_bowl.png" />
           </div>
         </div>
-        <div class="text-2">
-          <div class="box-2">
-            <p>ราคาถูก</p>
+        <div class="title">
+          <div class="paper_1" id="paper">
+            <div class="braek">
+              <img src="/img/assets/a/a05_braek.png" />
+            </div>
+            <div class="fast_1 fast-text">
+              <img src="/img/assets/a/a05_fast1.png" />
+            </div>
+            <div class="fast_2 fast-text">
+              <img src="/img/assets/a/a05_fast2.png" />
+            </div>
+            <div class="fast_3 fast-text">
+              <img src="/img/assets/a/a05_fast3.png" />
+            </div>
+            <div class="fast_4 fast-text">
+              <img src="/img/assets/a/a05_fast4.png" />
+            </div>
+            <img src="/img/assets/a/a04.5_paper1.png" />
           </div>
-        </div>
-        <div class="text-3">
-          <div class="box-3">
-            <p>คุณภาพวัสดุต่ำ</p>
-          </div>
-        </div>
-        <div class="text-4">
-          <div class="box-4">
-            <p>ผลิตอย่างรวดเร็ว</p>
-          </div>
-        </div>
-        <div class="text-5">
-          <div class="box-5">
-            <p>ผลิตนอกประเทศ</p>
-          </div>
-        </div>
-      </div>
-      <div class="line">
-        <div class="line-1">
-          <img src="/img/assets/c/c05_dot1.png" />
-        </div>
-        <div class="line-2">
-          <img src="/img/assets/c/c05_dot2.png" />
-        </div>
-        <div class="line-3">
-          <img src="/img/assets/c/c05_dot3.png" />
-        </div>
-        <div class="line-4">
-          <img src="/img/assets/c/c05_dot4.png" />
-        </div>
-        <div class="line-5">
-          <img src="/img/assets/c/c05_dot5.png" />
-        </div>
-      </div>
-      <div class="shirt">
-        <div class="shirt-img-1">
-          <img class="shirt-1" src="/img/assets/c/c02_jacket.png" />
-        </div>
-        <div class="shirt-img-2">
-          <img class="shirt-2" src="/img/assets/c/c02_sweater.png" />
-        </div>
-        <div class="shirt-img-3">
-          <img class="shirt-3" src="/img/assets/c/c02_coat.png" />
-        </div>
-        <div class="shirt-img-4">
-          <img class="shirt-4" src="/img/assets/c/c02_mickey.png" />
-        </div>
-        <div class="shirt-img-5">
-          <img class="shirt-5" src="/img/assets/c/c02_dress.png" />
-        </div>
-        <div class="shirt-img-6">
-          <img class="shirt-6" src="/img/assets/c/c03_shirt.png" />
-        </div>
-        <div class="shirt-img-7">
-          <img class="shirt-7" src="/img/assets/c/c04_hood.png" />
-        </div>
-        <div class="shirt-img-8">
-          <img class="shirt-8" src="/img/assets/c/c02_cheap.png" />
-        </div>
-        <div class="shirt-img-9">
-          <img class="shirt-9" src="/img/assets/c/c04_box.png" />
-        </div>
-        <div class="shirt-img-10">
-          <img class="shirt-10" src="/img/assets/c/c02_label.png" />
-        </div>
-      </div>
-    </section>
 
-    <section class="sec-4">
-      <div class="cloud">
-        <div class="c_1">
-          <img class="c-img-1" src="/img/assets/d/d01_cloud.png" />
-        </div>
-        <div class="c_2">
-          <img src="/img/assets/d/d02_cloud.png" />
-        </div>
-        <div class="c_3">
-          <img src="/img/assets/d/d03_cloud.png" />
-        </div>
-        <div class="c_4">
-          <img src="/img/assets/d/d04_cloud.png" />
-        </div>
-        <div class="btf">
-          <img src="/img/assets/d/d05_butterfly.png" />
-        </div>
-      </div>
-      <div class="sec4_text">
-        <p>แล้ว Fast Fashion<br />สร้างผลกระทบอะไรบ้างนะ</p>
-      </div>
-      <div class="cloud_cover">
-        <img src="/img/assets/e/e01_cloud.png" />
-      </div>
-    </section>
+          <div class="paper_2">
+            <div class="fashion_1 fash-text">
+              <img src="/img/assets/a/a05_fashion1.png" />
+            </div>
+            <div class="fashion_2 fash-text">
+              <img src="/img/assets/a/a05_fashion2.png" />
+            </div>
+            <div class="fashion_3 fash-text">
+              <img src="/img/assets/a/a05_fashion3.png" />
+            </div>
+            <div class="fashion_4 fash-text">
+              <img src="/img/assets/a/a05_fashion4.png" />
+            </div>
+            <div class="fashion_5 fash-text">
+              <img src="/img/assets/a/a05_fashion5.png" />
+            </div>
+            <div class="fashion_6 fash-text">
+              <img src="/img/assets/a/a05_fashion6.png" />
+            </div>
+            <div class="fashion_7 fash-text">
+              <img src="/img/assets/a/a05_fashion7.png" />
+            </div>
+            <div class="caption">
+              <img src="/img/assets/a/a05_caption.png" />
+            </div>
+            <img src="/img/assets/a/a04.5_paper2.png" />
+          </div>
 
-    <section class="sec-5">
-      <div class="sec-5-text">
-        <div class="sec-5-text1">
-          <p id="section5">ผลกระทบ</p>
+          <div class="bg">
+            <img src="/img/assets/a/a01_tablecloth.png" />
+          </div>
         </div>
-        <div class="sec-5-text2">
-          <p>ด้านสิ่งแวดล้อม</p>
+      </section>
+
+      <section class="sec-2" id="section2">
+        <h3 class="titleBurrowing">What is</h3>
+        <div class="titleBurrowing">
+          <img src="/img/assets/b/b03_fastfashion.png" />
         </div>
-      </div>
-      <div class="group">
-        <!-- <div class="sun">
+
+        <p class="titleBurrowing">
+          กระบวนการผลิตเสื้อผ้าที่เน้นความรวดเร็วฉับไว เป็นแฟชั่นวงจรสั้นๆ
+          เปลี่ยนรูปแบบไปเรื่อย ๆ เน้นการขายปริมาณมากในเวลาอันรวดเร็ว
+          โดยใช้ต้นทุนต่ำทั้งในส่วนของวัตถุดิบที่ใช้ในการผลิตและแรงงาน
+          เพื่อที่ให้เสื้อผ้านั้นมีราคาถูก เข้าถึงง่าย และสวมใส่ได้ในทุกโอกาส
+          แต่กระนั้นเอง ตลอดทุกขั้นตอนการผลิตได้ส่งผลต่อสิ่งแวดล้อมเป็นวงกว้าง
+        </p>
+        <div class="bag">
+          <img src="/img/assets/b/b02_bag.png" />
+        </div>
+        <div class="hanger">
+          <img src="/img/assets/b/b02_hanger.png" />
+        </div>
+        <div class="search">
+          <img class="search_icon" src="/img/assets/b/b04_magnifying.png" />
+        </div>
+      </section>
+
+      <section class="sec-3">
+        <div class="text-box">
+          <div class="text-1">
+            <div class="box-1">
+              <p>หลากหลายสไตล์</p>
+            </div>
+          </div>
+          <div class="text-2">
+            <div class="box-2">
+              <p>ราคาถูก</p>
+            </div>
+          </div>
+          <div class="text-3">
+            <div class="box-3">
+              <p>คุณภาพวัสดุต่ำ</p>
+            </div>
+          </div>
+          <div class="text-4">
+            <div class="box-4">
+              <p>ผลิตอย่างรวดเร็ว</p>
+            </div>
+          </div>
+          <div class="text-5">
+            <div class="box-5">
+              <p>ผลิตนอกประเทศ</p>
+            </div>
+          </div>
+        </div>
+        <div class="line">
+          <div class="line-1">
+            <img src="/img/assets/c/c05_dot1.png" />
+          </div>
+          <div class="line-2">
+            <img src="/img/assets/c/c05_dot2.png" />
+          </div>
+          <div class="line-3">
+            <img src="/img/assets/c/c05_dot3.png" />
+          </div>
+          <div class="line-4">
+            <img src="/img/assets/c/c05_dot4.png" />
+          </div>
+          <div class="line-5">
+            <img src="/img/assets/c/c05_dot5.png" />
+          </div>
+        </div>
+        <div class="shirt">
+          <div class="shirt-img-1">
+            <img class="shirt-1" src="/img/assets/c/c02_jacket.png" />
+          </div>
+          <div class="shirt-img-2">
+            <img class="shirt-2" src="/img/assets/c/c02_sweater.png" />
+          </div>
+          <div class="shirt-img-3">
+            <img class="shirt-3" src="/img/assets/c/c02_coat.png" />
+          </div>
+          <div class="shirt-img-4">
+            <img class="shirt-4" src="/img/assets/c/c02_mickey.png" />
+          </div>
+          <div class="shirt-img-5">
+            <img class="shirt-5" src="/img/assets/c/c02_dress.png" />
+          </div>
+          <div class="shirt-img-6">
+            <img class="shirt-6" src="/img/assets/c/c03_shirt.png" />
+          </div>
+          <div class="shirt-img-7">
+            <img class="shirt-7" src="/img/assets/c/c04_hood.png" />
+          </div>
+          <div class="shirt-img-8">
+            <img class="shirt-8" src="/img/assets/c/c02_cheap.png" />
+          </div>
+          <div class="shirt-img-9">
+            <img class="shirt-9" src="/img/assets/c/c04_box.png" />
+          </div>
+          <div class="shirt-img-10">
+            <img class="shirt-10" src="/img/assets/c/c02_label.png" />
+          </div>
+        </div>
+      </section>
+
+      <section class="sec-4">
+        <div class="cloud">
+          <div class="c_1">
+            <img class="c-img-1" src="/img/assets/d/d01_cloud.png" />
+          </div>
+          <div class="c_2">
+            <img src="/img/assets/d/d02_cloud.png" />
+          </div>
+          <div class="c_3">
+            <img src="/img/assets/d/d03_cloud.png" />
+          </div>
+          <div class="c_4">
+            <img src="/img/assets/d/d04_cloud.png" />
+          </div>
+          <div class="btf">
+            <img src="/img/assets/d/d05_butterfly.png" />
+          </div>
+        </div>
+        <div class="sec4_text">
+          <p>แล้ว Fast Fashion<br />สร้างผลกระทบอะไรบ้างนะ</p>
+        </div>
+        <div class="cloud_cover">
+          <img src="/img/assets/e/e01_cloud.png" />
+        </div>
+      </section>
+
+      <section class="sec-5">
+        <div class="sec-5-text">
+          <div class="sec-5-text1">
+            <p id="section5">ผลกระทบ</p>
+          </div>
+          <div class="sec-5-text2">
+            <p>ด้านสิ่งแวดล้อม</p>
+          </div>
+        </div>
+        <div class="group">
+          <!-- <div class="sun">
                 <img src="/img/assets/f/f01_sun.png">
             </div>
             <div class="sec-5-cloud">
@@ -289,59 +294,60 @@
                 
             </div> -->
 
-        <div class="parallax">
-          <div class="banner" id="sec5-1">
-            <p class="banner-head">ใช้ทรัพยากรน้ำเป็นจำนวนมาก</p>
-            <p class="banner-text">
-              มีการใช้น้ำในกระบวนการผลิตอย่างการปลูกฝ้ายและทำ<br />
-              ความสะอาดเสื้อผ้า โดยต้องใช้น้ำประมาณ 3,000 ลิตร <br />
-              ต่อเสื้อผ้า 1 ตัว
-            </p>
+          <div class="parallax">
+            <div class="banner" id="sec5-1">
+              <p class="banner-head">ใช้ทรัพยากรน้ำเป็นจำนวนมาก</p>
+              <p class="banner-text">
+                มีการใช้น้ำในกระบวนการผลิตอย่างการปลูกฝ้ายและทำ<br />
+                ความสะอาดเสื้อผ้า โดยต้องใช้น้ำประมาณ 3,000 ลิตร <br />
+                ต่อเสื้อผ้า 1 ตัว
+              </p>
+            </div>
+            <div class="banner" id="sec5-2">
+              <p class="banner-head">ความเสื่อมโทรมของที่ดิน</p>
+              <p class="banner-text">
+                การฝังกลบดินเพื่อกำจัดขยะเสื้อผ้าที่ไม่สามารถ<br />ย่อยสลายได้
+                ทำให้ทิ้งสารตกค้างจำนวนมากไว้ในดิน
+              </p>
+            </div>
+            <div class="banner" id="sec5-3">
+              <p class="banner-head">การปล่อยก๊าซเรือนกระจก</p>
+              <p class="banner-text">
+                การผลิตและการขนส่งเสื้อผ้ามีส่วนใน การปล่อยคาร์บอน<br />
+                10% ทั่วโลก อย่างโพลีเอสเตอร์ที่ปล่อยก๊าซเรือนกระจก<br />
+                3.3 พันล้านตันต่อปี หรือ 8%
+              </p>
+            </div>
+            <div class="banner" id="sec5-4">
+              <p class="banner-head">มลพิษทางน้ำ</p>
+              <p class="banner-text">
+                มีการใช้สารเคมีเพื่อย้อมสีเสื้อผ้าเกิดน้ำเสีย คิดเป็น 20%<br />
+                ของโลก และสร้างมลพิษในมหาสมุทรมาอย่างต่อเนื่อง
+              </p>
+            </div>
+            <div class="banner" id="sec5-5">
+              <p class="banner-head">อันตรายต่อสัตว์</p>
+              <p class="banner-text">
+                จากมลพิษทางน้ำและไมโครไฟเบอร์ที่ไม่สามารถย่อยสลาย<br />ในน้ำได้
+                ส่งผลกระทบต่อห่วงโซ่อาหารของสัตว์ทะเล
+              </p>
+            </div>
+            <img class="parallax-image" src="/img/assets/f/f00_all.png" />
           </div>
-          <div class="banner" id="sec5-2">
-            <p class="banner-head">ความเสื่อมโทรมของที่ดิน</p>
-            <p class="banner-text">
-              การฝังกลบดินเพื่อกำจัดขยะเสื้อผ้าที่ไม่สามารถ<br />ย่อยสลายได้
-              ทำให้ทิ้งสารตกค้างจำนวนมากไว้ในดิน
-            </p>
-          </div>
-          <div class="banner" id="sec5-3">
-            <p class="banner-head">การปล่อยก๊าซเรือนกระจก</p>
-            <p class="banner-text">
-              การผลิตและการขนส่งเสื้อผ้ามีส่วนใน การปล่อยคาร์บอน<br />
-              10% ทั่วโลก อย่างโพลีเอสเตอร์ที่ปล่อยก๊าซเรือนกระจก<br />
-              3.3 พันล้านตันต่อปี หรือ 8%
-            </p>
-          </div>
-          <div class="banner" id="sec5-4">
-            <p class="banner-head">มลพิษทางน้ำ</p>
-            <p class="banner-text">
-              มีการใช้สารเคมีเพื่อย้อมสีเสื้อผ้าเกิดน้ำเสีย คิดเป็น 20%<br />
-              ของโลก และสร้างมลพิษในมหาสมุทรมาอย่างต่อเนื่อง
-            </p>
-          </div>
-          <div class="banner" id="sec5-5">
-            <p class="banner-head">อันตรายต่อสัตว์</p>
-            <p class="banner-text">
-              จากมลพิษทางน้ำและไมโครไฟเบอร์ที่ไม่สามารถย่อยสลาย<br />ในน้ำได้
-              ส่งผลกระทบต่อห่วงโซ่อาหารของสัตว์ทะเล
-            </p>
-          </div>
-          <img class="parallax-image" src="/img/assets/f/f00_all.png" />
         </div>
-      </div>
-    </section>
+      </section>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
-    <script src="https://unpkg.com/split-type"></script>
-    <script src="/javascript/navbar.js"></script>
-    <script src="/javascript/progress,js"></script>
-    <script src="/javascript/section1.js"></script>
-    <script src="/javascript/section2.js"></script>
-    <script src="/javascript/section3.js"></script>
-    <script src="/javascript/section4.js"></script>
-    <script src="/javascript/section5.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+      <script src="https://unpkg.com/split-type"></script>
+      <script src="/javascript/navbar.js"></script>
+      <script src="/javascript/progress,js"></script>
+      <script src="/javascript/section1.js"></script>
+      <script src="/javascript/section2.js"></script>
+      <script src="/javascript/section3.js"></script>
+      <script src="/javascript/section4.js"></script>
+      <script src="/javascript/section5.js"></script>
+    </div>
   </body>
 </html>
