--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/section3.css" />
     <link rel="stylesheet" href="/css/section4.css" />
     <link rel="stylesheet" href="/css/section5.css" />
+    <link rel="stylesheet" href="/css/section6.css"/>
     <title>Fast Fashion</title>
   </head>
 
@@ -15,7 +16,7 @@
     <progress max="100" value="0"></progress>
     <div class="navbar">
       <div class="nav" id="nav">
-        <a href="#home">
+        <a href="#section1">
           <img src="/img/assets/logo.png" />
         </a>
         <a href="#myLinks" class="icon" onclick="openNav()">
@@ -237,10 +238,10 @@
       </div>
     </section>
 
-    <section class="sec-5">
+    <section class="sec-5 "id="section5">
       <div class="sec-5-text">
         <div class="sec-5-text1">
-          <p id="section5">ผลกระทบ</p>
+          <p >ผลกระทบ</p>
         </div>
         <div class="sec-5-text2">
           <p>ด้านสิ่งแวดล้อม</p>
@@ -250,7 +251,7 @@
         <!-- <div class="sun">
                 <img src="/img/assets/f/f01_sun.png">
             </div>
-            <div class="sec-5-cloud">
+            <div class="cloud_group">
                 <img src="/img/assets/f/f02_cloud2.png">
             </div>
             <div class="jean">
@@ -281,18 +282,65 @@
                 <img src="/img/assets/f/f09_pipe.png">
                 
             </div> -->
-        <div class="banner">
-          <p>Fast Fashion</p>
-        </div>
+
         <div class="parallax">
+          <div class="banner" id="sec5-1">
+            <p class="banner-head">ใช้ทรัพยากรน้ำเป็นจำนวนมาก</p>
+            <p class="banner-text">
+              มีการใช้น้ำในกระบวนการผลิตอย่างการปลูกฝ้ายและทำ<br />
+              ความสะอาดเสื้อผ้า โดยต้องใช้น้ำประมาณ 3,000 ลิตร <br />
+              ต่อเสื้อผ้า 1 ตัว
+            </p>
+          </div>
+          <div class="banner" id="sec5-2">
+            <p class="banner-head">ความเสื่อมโทรมของที่ดิน</p>
+            <p class="banner-text">
+              การฝังกลบดินเพื่อกำจัดขยะเสื้อผ้าที่ไม่สามารถ<br />ย่อยสลายได้
+              ทำให้ทิ้งสารตกค้างจำนวนมากไว้ในดิน
+            </p>
+          </div>
+          <div class="banner" id="sec5-3">
+            <p class="banner-head">การปล่อยก๊าซเรือนกระจก</p>
+            <p class="banner-text">
+              การผลิตและการขนส่งเสื้อผ้ามีส่วนใน การปล่อยคาร์บอน<br />
+              10% ทั่วโลก อย่างโพลีเอสเตอร์ที่ปล่อยก๊าซเรือนกระจก<br />
+              3.3 พันล้านตันต่อปี หรือ 8%
+            </p>
+          </div>
+          <div class="banner" id="sec5-4">
+            <p class="banner-head">มลพิษทางน้ำ</p>
+            <p class="banner-text">
+              มีการใช้สารเคมีเพื่อย้อมสีเสื้อผ้าเกิดน้ำเสีย คิดเป็น 20%<br />
+              ของโลก และสร้างมลพิษในมหาสมุทรมาอย่างต่อเนื่อง
+            </p>
+          </div>
+          <div class="banner" id="sec5-5">
+            <p class="banner-head">อันตรายต่อสัตว์</p>
+            <p class="banner-text">
+              จากมลพิษทางน้ำและไมโครไฟเบอร์ที่ไม่สามารถย่อยสลาย<br />ในน้ำได้
+              ส่งผลกระทบต่อห่วงโซ่อาหารของสัตว์ทะเล
+            </p>
+          </div>
           <img class="parallax-image" src="/img/assets/f/f00_all.png" />
         </div>
       </div>
+      <div class="sec-5-div"><img class="sec-5-bg" src="/img/assets/g/bg.png"></div>
+      <!-- <div class="sec-5-title">
+        <p>ปัญหาสิทธิมนุษยชน</p>
+      </div> -->
     </section>
-    <section class="sec-4"></section>
+
+    <section class="sec-6">
+      <div class="sec-6-title">
+        <p>ปัญหาสิทธิมนุษยชน</p>
+      </div>
+    </section>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+    <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
+    <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
     <script src="/javascript/navbar.js"></script>
     <script src="/javascript/progress,js"></script>
@@ -301,5 +349,6 @@
     <script src="/javascript/section3.js"></script>
     <script src="/javascript/section4.js"></script>
     <script src="/javascript/section5.js"></script>
+    <script src="/javascript/section6.js"></script>
   </body>
 </html>
