--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a href="#section1" class="list">หน้าหลัก</a>
           <a href="#section2" class="list">ความหมาย</a>
           <a href="#section5" class="list">ผลกระทบ</a>
-          <a href="#" class="list">แนวทางการแก้ปัญหา</a>
+          <a href="#section6" class="list">แนวทางการแก้ปัญหา</a>
           <a href="#" class="list">ผู้จัดทำ</a>
         </div>
       </div>
@@ -330,9 +330,32 @@
       </div> -->
     </section>
 
-    <section class="sec-6">
+    <section class="sec-6" id="section6">
       <div class="sec-6-title">
         <p>ปัญหาสิทธิมนุษยชน</p>
+      </div>
+      <div class="sec-6-group">
+        <div class="clock-1">
+          <img src="/img/assets/g/g02_clock1.png">
+        </div>
+        <div class="clock-2">
+          <img src="/img/assets/g/g02_clock2.png">
+        </div>
+        <div class="clock-3">
+          <img src="/img/assets/g/g02_clock3.png">
+        </div>
+        <div class="clock-4">
+          <img src="/img/assets/g/g02_clock4.png">
+        </div>
+        <div class="shirt-orange">
+          <img src="/img/assets/g/g03_shirt.png">
+        </div>
+        <div class="g04_woman">
+          <img src="/img/assets/g/g04_woman.png">
+        </div>
+        <div class="g05_paper">
+          <img src="/img/assets/g/g05_paper.png">
+        </div>
       </div>
     </section>
 
