section 6 parallax clock

--- a/index.html
+++ b/index.html
@@ -248,41 +248,6 @@
         </div>
       </div>
       <div class="group">
-        <!-- <div class="sun">
-                <img src="/img/assets/f/f01_sun.png">
-            </div>
-            <div class="cloud_group">
-                <img src="/img/assets/f/f02_cloud2.png">
-            </div>
-            <div class="jean">
-                <img src="/img/assets/f/f03_jean.png">
-            </div>
-            <div class="clay">
-                <img src="/img/assets/f/f04_clay.png">
-            </div>
-            <div class="water">
-                <img src="/img/assets/f/f05_water.png">
-            </div>
-            <div class="land">
-                <img src="/img/assets/f/f06_land.png">
-            </div>
-            <div class="blender">
-                <img src="/img/assets/f/f06.5_blender.png">
-            </div>
-            <div class="factory">
-                <img src="/img/assets/f/f06.5_factory.png">
-            </div>
-            <div class="tree">
-                <img src="/img/assets/f/f07_tree.png">
-            </div>
-            <div class="fish">
-                <img src="/img/assets/f/f08_fish.png">
-            </div>
-            <div class="pipe">
-                <img src="/img/assets/f/f09_pipe.png">
-                
-            </div> -->
-
         <div class="parallax">
           <div class="banner" id="sec5-1">
             <p class="banner-head">ใช้ทรัพยากรน้ำเป็นจำนวนมาก</p>
@@ -347,7 +312,7 @@
         <div class="clock-4">
           <img src="/img/assets/g/g02_clock4.png">
         </div>
-        <div class="shirt-orange">
+        <!-- <div class="shirt-orange">
           <img src="/img/assets/g/g03_shirt.png">
         </div>
         <div class="g04_woman">
@@ -355,7 +320,7 @@
         </div>
         <div class="g05_paper">
           <img src="/img/assets/g/g05_paper.png">
-        </div>
+        </div> -->
       </div>
     </section>
 
@@ -366,7 +331,7 @@
     <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
     <script src="/javascript/navbar.js"></script>
-    <script src="/javascript/progress,js"></script>
+    <script src="/javascript/progress.js"></script>
     <script src="/javascript/section1.js"></script>
     <script src="/javascript/section2.js"></script>
     <script src="/javascript/section3.js"></script>
