all parallax clock

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         <div class="clock-4">
           <img src="/img/assets/g/g02_clock4.png">
         </div>
-        <!-- <div class="shirt-orange">
+        <div class="shirt-orange">
           <img src="/img/assets/g/g03_shirt.png">
         </div>
         <div class="g04_woman">
@@ -320,7 +320,7 @@
         </div>
         <div class="g05_paper">
           <img src="/img/assets/g/g05_paper.png">
-        </div> -->
+        </div>
       </div>
     </section>
 
