--- a/index.html
+++ b/index.html
@@ -322,8 +322,28 @@
           <img src="/img/assets/g/g05_paper.png">
         </div>
       </div>
+      <div class="all_woman">
+        <div class="woman_red">
+          <img src="/img/assets/g/g06_red.png">
+        </div>
+        <div class="woman_original">
+          <img src="/img/assets/g/g04_woman.png">
+        </div>
+        <div class="woman_red2">
+          <img src="/img/assets/g/g06_red.png">
+        </div>
+      </div>
+      <div class="sec-6-title2">
+        <p>ปัญหา</p>
+        <p>สิทธิมนุษยชน</p>
+      </div>
+      <div>
+        
+      </div>
     </section>
-
+<!-- <div>
+  aomkeetak
+</div> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
