--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <a href="#section1" class="list">หน้าหลัก</a>
           <a href="#section2" class="list">ความหมาย</a>
           <a href="#section5" class="list">ผลกระทบ</a>
-          <a href="#section6" class="list">แนวทางการแก้ปัญหา</a>
+          <a href="#" class="list">แนวทางการแก้ปัญหา</a>
           <a href="#" class="list">ผู้จัดทำ</a>
         </div>
       </div>
