i did section 6,7,8 and edited section2.js

--- a/index.html
+++ b/index.html
@@ -520,11 +520,18 @@
             <img src="/img/assets/i/i04_chat2.png">
           </div>
         </div>
-        
+
       </div>
-<div class="i05_hero">
-          <img src="/img/assets/i/i05_hero.png">
-        </div>
+      <div class="i05_hero">
+        <img src="/img/assets/i/i05_hero.png">
+      </div>
+      <div class="i01_halftone">
+        <img src="/img/assets/i/i01_halftone.png">
+      </div>
+    </section>
+
+    <section class="sec-9">
+
     </section>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
