--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@
           </p>
         </div>
       </div>
-      <div class="sec-6-div">
+      <!-- <div class="sec-6-div">
         <img class="sec-6-bg" src="/img/assets/h/bg2.png" />
-      </div>
+      </div> -->
     </section>
 
     <section class="sec-7" id="section7">
