--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     </div>
     <div class="slider"></div>
 
-    <progress max="100" value="0"></progress>
+    <!-- <progress max="100" value="0"></progress> -->
+
     <div class="navbar">
       <div class="nav" id="nav">
         <a href="#section1">
@@ -60,6 +61,9 @@
       </div>
     </div>
     <div class="wrapweb">
+      <div class="progress-container">
+        <div class="progress-bar" id="proBar"></div>
+      </div>
       <section class="sec-1" id="section1">
         <div class="cover">
           <div class="wrapper_1">
