responsive all text img (no check)

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       </div>
     </div>
     <div class="wrapweb">
+      <!-- TODO: responsive dell -->
       <div class="progress-container">
         <div class="progress-bar" id="proBar"></div>
       </div>
@@ -190,6 +191,7 @@
             <img class="shirt-10" src="/img/assets/c/c02_label.png" />
           </div>
         </div>
+        <!-- TODO: hotspot ติดกับรูป -->
         <div class="BornHS__Wrapper">
           <div
             class="BornHS__Modal__Input"
@@ -597,6 +599,7 @@
         <div class="text_down">
           <p>เกิดวงจรเสื้อผ้าที่ไม่มีวันจบสิ้น</p>
         </div>
+        <!-- TODO: ให้ตัวหนังสืออยู่ในรูป -->
         <div class="h00_scoll">
           <img src="/img/assets/h/h00_scoll.png" />
         </div>
@@ -709,7 +712,7 @@
       </section>
 
       <footer class="footer">
-        <p>Copyright ©2024 Say NO to Fast</p>
+        <p>Copyright ©2024 Say No To Fast</p>
       </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
