fix image hotspot

--- a/index.html
+++ b/index.html
@@ -190,13 +190,14 @@
           <div class="shirt-img-10">
             <img class="shirt-10" src="/img/assets/c/c02_label.png" />
           </div>
+          <!-- <img
+            src="/img/assets/c/c02_down.png"
+            style="width: 60%; padding: 10px 271px"
+          /> -->
         </div>
-        <!-- TODO: hotspot ติดกับรูป -->
+
         <div class="BornHS__Wrapper">
-          <div
-            class="BornHS__Modal__Input"
-            style="margin-top: 13%; margin-left: 28%"
-          >
+          <div class="BornHS__Modal__Input" style="margin-top: 4vw; left: 22vw">
             <input
               type="checkbox"
               id="H1"
@@ -205,10 +206,7 @@
             />
             <label for="H1" class="BornHS__Label"></label>
             <label for="H1" class="BornHS__Overlay"></label>
-            <div
-              class="BornHS__Modal__Content"
-              style="margin-top: 0%; margin-left: -103%"
-            >
+            <div class="BornHS__Modal__Content" style="margin-left: -20vw">
               <div class="Content__Wrapper">
                 <label for="H1" class="BornHS__Close"></label>
                 <h2 class="BornHS__Title">หลากหลายสไตล์</h2>
@@ -219,10 +217,7 @@
               </div>
             </div>
           </div>
-          <div
-            class="BornHS__Modal__Input"
-            style="margin-top: 12%; margin-left: 48%"
-          >
+          <div class="BornHS__Modal__Input" style="margin-top: 0vw; left: 47vw">
             <input
               type="checkbox"
               id="H2"
@@ -233,7 +228,7 @@
             <label for="H2" class="BornHS__Overlay"></label>
             <div
               class="BornHS__Modal__Content"
-              style="margin-top: -23%; margin-left: 10%"
+              style="margin-top: -9vw; margin-left: -20vw"
             >
               <div class="Content__Wrapper">
                 <label for="H2" class="BornHS__Close"></label>
@@ -247,7 +242,7 @@
           </div>
           <div
             class="BornHS__Modal__Input"
-            style="margin-top: 30%; margin-left: 72%"
+            style="margin-top: 15vw; left: 74vw"
           >
             <input
               type="checkbox"
@@ -259,7 +254,7 @@
             <label for="H3" class="BornHS__Overlay"></label>
             <div
               class="BornHS__Modal__Content"
-              style="margin-top: -23%; margin-left: 10%"
+              style="margin-top: -9vw; margin-left: 3vw"
             >
               <div class="Content__Wrapper">
                 <label for="H3" class="BornHS__Close"></label>
@@ -273,7 +268,7 @@
           </div>
           <div
             class="BornHS__Modal__Input"
-            style="margin-top: 30%; margin-left: 30%"
+            style="margin-top: 26vw; left: 20vw"
           >
             <input
               type="checkbox"
@@ -283,10 +278,7 @@
             />
             <label for="H4" class="BornHS__Label"></label>
             <label for="H4" class="BornHS__Overlay"></label>
-            <div
-              class="BornHS__Modal__Content"
-              style="margin-top: 0%; margin-left: -103%"
-            >
+            <div class="BornHS__Modal__Content" style="margin-left: -20vw">
               <div class="Content__Wrapper">
                 <label for="H4" class="BornHS__Close"></label>
                 <h2 class="BornHS__Title">การผลิตอย่างรวดเร็ว</h2>
@@ -299,7 +291,7 @@
           </div>
           <div
             class="BornHS__Modal__Input"
-            style="margin-top: 35%; margin-left: 70%"
+            style="margin-top: 24vw; left: 64vw"
           >
             <input
               type="checkbox"
@@ -309,10 +301,7 @@
             />
             <label for="H5" class="BornHS__Label"></label>
             <label for="H5" class="BornHS__Overlay"></label>
-            <div
-              class="BornHS__Modal__Content"
-              style="margin-top: 0%; margin-left: 10%"
-            >
+            <div class="BornHS__Modal__Content" style="margin-left: -20vw">
               <div class="Content__Wrapper">
                 <label for="H5" class="BornHS__Close"></label>
                 <h2 class="BornHS__Title">ผลิตนอกประเทศ</h2>
