--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="/css/section9.css" />
     <link rel="stylesheet" href="/css/section10.css" />
     <link rel="stylesheet" href="/css/footer.css" />
-    <title>Fast Fashion</title>
+    <title>Say NO to Fast</title>
+    <link rel="icon" type="image/x-icon" href="img/assets/favicon.png" />
   </head>
 
   <body>
@@ -701,7 +702,7 @@
       </section>
 
       <footer class="footer">
-        <p>Copyright ©2024 Say No To Fast</p>
+        <p>Copyright ©2024 Say NO to Fast</p>
       </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
