fix responsive all + add transform

--- a/index.html
+++ b/index.html
@@ -207,7 +207,11 @@
             />
             <label for="H1" class="BornHS__Label"></label>
             <label for="H1" class="BornHS__Overlay"></label>
-            <div class="BornHS__Modal__Content" style="margin-left: -20vw">
+            <div
+              class="BornHS__Modal__Content"
+              id="modal1"
+              style="margin-left: -20vw"
+            >
               <div class="Content__Wrapper">
                 <label for="H1" class="BornHS__Close"></label>
                 <h2 class="BornHS__Title">หลากหลายสไตล์</h2>
@@ -229,6 +233,7 @@
             <label for="H2" class="BornHS__Overlay"></label>
             <div
               class="BornHS__Modal__Content"
+              id="modal2"
               style="margin-top: -9vw; margin-left: -20vw"
             >
               <div class="Content__Wrapper">
@@ -255,6 +260,7 @@
             <label for="H3" class="BornHS__Overlay"></label>
             <div
               class="BornHS__Modal__Content"
+              id="modal3"
               style="margin-top: -9vw; margin-left: 3vw"
             >
               <div class="Content__Wrapper">
@@ -279,7 +285,11 @@
             />
             <label for="H4" class="BornHS__Label"></label>
             <label for="H4" class="BornHS__Overlay"></label>
-            <div class="BornHS__Modal__Content" style="margin-left: -20vw">
+            <div
+              class="BornHS__Modal__Content"
+              id="modal4"
+              style="margin-left: -20vw"
+            >
               <div class="Content__Wrapper">
                 <label for="H4" class="BornHS__Close"></label>
                 <h2 class="BornHS__Title">การผลิตอย่างรวดเร็ว</h2>
@@ -302,7 +312,11 @@
             />
             <label for="H5" class="BornHS__Label"></label>
             <label for="H5" class="BornHS__Overlay"></label>
-            <div class="BornHS__Modal__Content" style="margin-left: -20vw">
+            <div
+              class="BornHS__Modal__Content"
+              id="modal5"
+              style="margin-left: -20vw"
+            >
               <div class="Content__Wrapper">
                 <label for="H5" class="BornHS__Close"></label>
                 <h2 class="BornHS__Title">ผลิตนอกประเทศ</h2>
@@ -507,19 +521,19 @@
             <div class="h12_flash">
               <img src="/img/assets/h/h12_flash.png" />
             </div>
-            <div class="h11_t">
+            <div class="h11_t trend">
               <img src="/img/assets/h/h11_t.png" />
             </div>
-            <div class="h11_r">
+            <div class="h11_r trend">
               <img src="/img/assets/h/h11_r.png" />
             </div>
-            <div class="h11_e">
+            <div class="h11_e trend">
               <img src="/img/assets/h/h11_e.png" />
             </div>
-            <div class="h11_n">
+            <div class="h11_n trend">
               <img src="/img/assets/h/h11_n.png" />
             </div>
-            <div class="h11_d">
+            <div class="h11_d trend">
               <img src="/img/assets/h/h11_d.png" />
             </div>
             <div class="h10_shirt">
@@ -527,13 +541,13 @@
             </div>
           </div>
           <div class="container-1-right">
-            <div class="right-text-1">
+            <div class="right-text-1 right-text">
               <p>ผลกระทบ</p>
             </div>
-            <div class="right-text-2">
+            <div class="right-text-2 right-text">
               <p>ต่อผู้บริโภค</p>
             </div>
-            <div class="right-text-3">
+            <div class="right-text-3 right-text">
               <p>
                 ด้วยราคาที่จับต้องได้ จึงกระตุ้นให้<br />
                 ซื้อเสื้อผ้าใหม่ตลอดเวลา และยังเกิด<br />
@@ -589,7 +603,7 @@
         <div class="text_down">
           <p>เกิดวงจรเสื้อผ้าที่ไม่มีวันจบสิ้น</p>
         </div>
-        <!-- TODO: ให้ตัวหนังสืออยู่ในรูป -->
+
         <div class="h00_scoll">
           <img src="/img/assets/h/h00_scoll.png" />
         </div>
@@ -612,6 +626,9 @@
           <div class="sec-8-img">
             <img src="/img/assets/i/i02_fastfashion.png" />
           </div>
+          <div class="i05_hero">
+            <img src="/img/assets/i/i05_hero.png" />
+          </div>
           <div class="quote">
             <div class="quote_chat1">
               <img src="/img/assets/i/i03_chat1.png" />
@@ -621,9 +638,7 @@
             </div>
           </div>
         </div>
-        <div class="i05_hero">
-          <img src="/img/assets/i/i05_hero.png" />
-        </div>
+
         <div class="i01_halftone">
           <img src="/img/assets/i/i01_halftone.png" />
         </div>
