--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="navbar">
       <div class="nav" id="nav">
-        <a href="#section1">
+        <a href="">
           <img src="/img/assets/logo.png" />
         </a>
         <a href="#myLinks" class="icon" onclick="openNav()">
