--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="intro">
       <div class="intro-text">
         <div class="loader"></div>
+        <p>เพื่อประสบการณ์การรับชมที่ดีที่สุด ควรเข้าชมด้วยคอมพิวเตอร์ PC</p>
       </div>
     </div>
     <div class="slider"></div>
